# anki-claude-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: card-writer.md  diagram-maker.md  extractor.md  reviewer.md
.claude/skills/generate-flashcards/: SKILL.md
.github/workflows/: test.yml
ankicli/: cli.py  loader.py
tests/: conftest.py  test_e2e.py  test_loader.py  test_parse_cards.py
